2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Support Emacs versions that do not have
	define-error.

2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el: Remove version header.

2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el, jira2.el: Fix first line header
	format.

2015-10-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el: Bump version to 3.0.1.

2015-10-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el: Update home page.

2015-10-22  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el: Bump version to 3.0.0.

2015-10-22  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el: Merge in changes from Emacs master branch.

2015-10-22  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Merge in changes from Emacs master branch.

2015-10-22  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el: Shorten first line description.

2015-10-21  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Make a small whitespace fix.

2015-10-21  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el: Update copyright years.

2015-10-17  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encoded-namespaces): Move above first use
	in soap-encode-xs-element.

2015-10-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-type-is-array?): new defun
	(soap-encode-xs-element): handle array elements in this function
	(soap-encode-xs-complex-type): flag error if asked to encode an
	array type, this is handled in `soap-encode-xs-element'

2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-inspect-xs-attribute-group): Do not print
	type for attribute group.

2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-sample-value-for-xs-attribute-group): New
	function.